Fix CSS scrollbar color syntax

--- a/src/css/styles/_layout.scss
+++ b/src/css/styles/_layout.scss
@@ -53,7 +53,7 @@
 
 @mixin scrollbar-style-horizontal {
 	scrollbar-width: thin;
-	scrollbar-color: lighten($color-secondary, 15%), $color-secondary;
+	scrollbar-color: lighten($color-secondary, 15%) $color-secondary;
 
 	& { // IE
 		scrollbar-face-color: lighten($color-secondary, 15%);
